fix whitespace

--- a/src/layouts/docs/style/page.css
+++ b/src/layouts/docs/style/page.css
@@ -255,7 +255,7 @@
 	/* Layout */
 	inline-size: var(--main-content-width);
 
-	& > *:not(a-playground, .table-overflow, table, .storybook-demo, .p-icon-groups, .status-system-colors) {
+	& > *:not(a-playground, .table-overflow, table, .storybook-demo, .p-icon-groups, .status-system-colors, .color-table) {
 		/* Layout */
 		max-inline-size: 175--step;
 	}
