--- a/src/layouts/docs/style/utilities.css
+++ b/src/layouts/docs/style/utilities.css
@@ -1,7 +1,7 @@
 /* Table */
 /* ========================================================================== */
 
-.table-overflow {
+.table-overflow, .color-table {
 	/* Layout */
 	margin-block-end: 5--step;
 	max-inline-size: 230--step;
@@ -73,6 +73,11 @@
 		background: transparent;
 		border: 1--step solid transparent;
 	}
+}
+
+.color-table code {
+	/* Text */
+	white-space: nowrap;
 }
 
 /* Table for Heat Map page */
